# ask-maas

./: .gitignore  QUICKSTART.md  README.md  deploy-ask-maas.sh  deploy-config.yaml  example-env  test-deployment.sh
ask-maas-api/: .dockerignore  Dockerfile  entrypoint.sh  ingest.py  requirements.txt
ask-maas-api/app/: main.py
ask-maas-api/app/models/: chat.py
ask-maas-api/app/routers/: chat.py  chat_enhanced.py  chat_unified.py  ingest.py
ask-maas-api/app/services/: cache.py  citation_expansion.py  config.py  github.py  ingest.py  llm.py  retrieval.py  unified_vector_retrieval.py  vector_retrieval.py
ask-maas-api/app/utils/: logging.py  metrics.py
ask-maas-api/ask_maas_orchestrator_patch/: __init__.py
ask_maas_orchestrator_patch/: expand.py
citation-expander/: Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
citation-expander/app/: __init__.py  main.py
citation-expander/k8s/: configmap.yaml  cron-ttl.yaml  deployment.yaml  networkpolicy.yaml
citation-expander/libs/: __init__.py  github.py  links.py  normalizers.py  pdf.py
citation-expander/tests/: __init__.py  conftest.py  test_api.py  test_expand.py  test_worker.py
citation-expander/worker/: __init__.py  embeddings.py  jobs.py
ghost-site/: Dockerfile  next.config.js  package-lock.json  package.json
ghost-site/src/app/: globals.css  layout.tsx  page.tsx
ghost-site/src/components/: ArticleLoader.tsx  ArticleViewer.tsx  ChatWidget.tsx  ManualArticleInput.tsx  RedHatArticleViewer.tsx
ghost-site/src/data/: articles.ts
k8s/api/: orchestrator-deployment.yaml  redis-deployment.yaml
k8s/cicd/: argocd-apps.yaml  tekton-pipeline.yaml
k8s/frontend/: ghost-site-deployment.yaml
k8s/gateway/: kuadrant-gateway.yaml  openshift-routes.yaml  service-mesh-policies.yaml
k8s/gpu/: gpu-node-config.yaml
k8s/models/: qdrant.yaml  tei-embeddings.yaml  tei-reranker.yaml  vllm-llama3-8b.yaml  vllm-mistral-7b.yaml  vllm-mixtral-8x7b.yaml  vllm-qwen2.5-32b.yaml
k8s/namespaces/: namespaces.yaml
k8s/observability/: grafana-dashboards.yaml  opentelemetry-config.yaml  prometheus-config.yaml
k8s/operators/: README.md  kserve-config.yaml  service-mesh-control-plane.yaml
